fix sidebar text overflow when collapsed

--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -38,7 +38,6 @@
     display: flex;
     justify-content: space-evenly;
     margin-top: 10px;
-    background: pink;
   }
   
   .sideBar .panel .colorcoded-wrapper .circle-wrapper {
@@ -52,6 +51,7 @@
     margin-top: 4px;
     text-align: center;
     color: #ffffff;
+    overflow:hidden;
   }
   
   .sideBar .panel .colorcoded-wrapper .circle-wrapper .circle {
@@ -66,6 +66,7 @@
     margin: 0 4px;
     font-weight: bold;
     font-size: 16px;
+    overflow:hidden;
   }
   
   .sideBar .panel .colorcoded-wrapper .money-wrapper {
@@ -121,4 +122,5 @@
 
 .sideBar .panel .timeSeries {
     background: greenyellow;
+    text-overflow: hidden;
 }
